# ChangeLog for media-libs/clutter-gst
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/clutter-gst/ChangeLog,v 1.4 2011/02/11 21:09:00 nirbheek Exp $

*clutter-gst-1.3.4-r1 (11 Feb 2011)

  11 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +clutter-gst-1.3.4-r1.ebuild:
  Remove .la files

*clutter-gst-1.3.4 (31 Jan 2011)

  31 Jan 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  clutter-gst-1.0.0.ebuild, +clutter-gst-1.3.4.ebuild:
  Bump to 1.3.4, package.masked, USE=introspection is now +introspection

  26 Jun 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  clutter-gst-1.0.0.ebuild:
  Fix USE=introspection deps, and package.use.mask it in the base profile
  since gstreamer doesn't have introspection yet

*clutter-gst-1.0.0 (26 Feb 2010)

  26 Feb 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  +clutter-gst-1.0.0.ebuild, +metadata.xml:
  Add an initial ebuild for clutter-gst, gstreamer integration library for
  clutter
