@@ -1,7 +1,6 @@
 DIST clutter-gst-1.0.0.tar.bz2 414768 RMD160 f5c825e6c5da62a39a98e5515c0ede2e3e801907 SHA1 22f262b8d4d70d5d0ef499614fc0332a7a641241 SHA256 ae6ec048b570157130e9f9069f2495caf0da9eefa8d7f3b1789f3346fb16f696
 DIST clutter-gst-1.3.4.tar.bz2 446018 RMD160 4d80a22ec9cb5fecc3ba942c61be80ad7c8d76fe SHA1 0a370ccd2de19f91721f1df3202b29bebb566a15 SHA256 de4ce6d3313be3074c6afc6f20276ef06f1a460b3a6755fc5c6e048685de137a
 EBUILD clutter-gst-1.0.0.ebuild 944 RMD160 10b681dc25b09d33cd0eeba211a2616267fd442b SHA1 78b1dfb19e3cd149fbafd431787655494dae5669 SHA256 8ed5f0238782ccc5a7ade228f533316909ff634fdc6b5ea8432a50ef11825f5a
-EBUILD clutter-gst-1.3.4-r1.ebuild 967 RMD160 ab09aa19cbbd7f489d4d17f2a4ae84579ae911d7 SHA1 6ca942caddfb2abd51a9e7254b31e0b4d87eb083 SHA256 2ba6fb7c352de2e49a57d689766561cb784e3629df6fe051b8427d6cee0dbca4
-EBUILD clutter-gst-1.3.4.ebuild 942 RMD160 02bd0c7fbdadf5f17892e4af1de53710478dea0e SHA1 fa5cd74c43ce45a605bffc94d66f271e46d47aff SHA256 66af0d5f659c7820b07b0e41c15de384b44c7ca7a86edfede1aa61972ab51aa8
-MISC ChangeLog 1003 RMD160 62661f0c89f11b338d50558b7fc7d73e0166f8f5 SHA1 982ed7b2c2464e7a691034839a5d8bde826f8857 SHA256 b72d67dfe4d8506b53aacf0f9cffddc64b5e41a2e6c475d009eee798d210ec5c
+EBUILD clutter-gst-1.3.4-r1.ebuild 1114 RMD160 acb180b8a47a43a7f49284cf1a59ece753ef73b8 SHA1 41d609808c5a71c02da2534c42b11e1ab57d9308 SHA256 b8208ed458cb3e3ac7d1041c846e2bd75a893a4e34236b7fcfd3efe331974e93
+MISC ChangeLog 1145 RMD160 1e523d303e026a417d2f2b4c458efe28e374cc8c SHA1 dd88447bbdc8039a7e038b407b3bd9c29e3e4bea SHA256 885f0658d342c0b80c88fbb9c37ce08455bc8b2d21a2d971f30ed7c4af1a1dab
 MISC metadata.xml 272 RMD160 94ca2c5330dafece28a4cd39f8c53c0926c72b58 SHA1 0594029445efc117f85d07402cacb33f063a8198 SHA256 d6cd612b3d4d224cec4189a81e42dc98ba6fd96ce241908b57491d78f99e6314
