@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/clutter-gst
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/clutter-gst/ChangeLog,v 1.4 2011/02/11 21:09:00 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/clutter-gst/ChangeLog,v 1.5 2011/02/18 06:44:43 nirbheek Exp $
+
+  18 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  -clutter-gst-1.3.4.ebuild, clutter-gst-1.3.4-r1.ebuild:
+  Fix bug 313525, remove old
 
 *clutter-gst-1.3.4-r1 (11 Feb 2011)
 
